--- a/Videos.html
+++ b/Videos.html
@@ -153,7 +153,7 @@
     </div>
 
     <div class="page-tabs">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Products.html">Products</a>
         <a href="Videos.html">Videos</a>
         <a href="Hire.html">Hire</a>
