--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     <p>Explore a world of drones and aerial wonders.</p>
 
     <div class="pictures">
-        <img src="Resource/s-l1600 (2).jpg" width="250" height="250" alt="Drone 1">
-        <img src="Resource/s-l640.jpg" width="250" height="250" alt="Drone 2">
-        <img src="Resource/s-l1600 (3).jpg" width="250" height="250" alt="Drone 3">
+        <img src="s-l1600 (2).jpg" width="250" height="250" alt="Drone 1">
+        <img src="s-l640.jpg" width="250" height="250" alt="Drone 2">
+        <img src="s-l1600 (3).jpg" width="250" height="250" alt="Drone 3">
     </div>
 	
     <p>Here are some of our Featured Items!</p>
