--- a/Products.html
+++ b/Products.html
@@ -80,7 +80,7 @@
 
     <div class="product-container">
         <div class="product">
-            <img src="Resource/s-l1600 (2).jpg" alt="Drone Model 1">
+            <img src="s-l1600 (2).jpg" alt="Drone Model 1">
             <h2>Drone Model 1</h2>
             <p>High-performance drone with advanced features</p>
             <p>$499.99</p>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="product">
-            <img src="Resource/s-l640.jpg" alt="Drone Model 2">
+            <img src="s-l640.jpg" alt="Drone Model 2">
             <h2>Drone Model 2</h2>
             <p>Compact and portable drone for aerial photography</p>
             <p>$299.99</p>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="product">
-            <img src="Resource/s-l1600 (3).jpg" alt="Drone Model 3">
+            <img src="s-l1600 (3).jpg" alt="Drone Model 3">
             <h2>Drone Model 3</h2>
             <p>Professional-grade drone with 4K camera</p>
             <p>$799.99</p>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="product">
-            <img src="Resource/s-l1600.jpg" alt="Drone Model 4">
+            <img src="s-l1600.jpg" alt="Drone Model 4">
             <h2>Drone Model 4</h2>
             <p>Advanced drone with GPS tracking</p>
             <p>$599.99</p>
