--- a/Products.html
+++ b/Products.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="product">
-            <img src="S-l1600.jpg" alt="Drone Model 4">
+            <img src="s-l1600.jpg" alt="Drone Model 4">
             <h2>Drone Model 4</h2>
             <p>Advanced drone with GPS tracking</p>
             <p>$599.99</p>
