--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </table>
 
     <div class="page-tabs">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Products.html">Products</a>
         <a href="Videos.html">Videos</a>
         <a href="Hire.html">Hire</a>
