--- a/Videos.html
+++ b/Videos.html
@@ -105,11 +105,11 @@
     <div class="video-container">
         <div class="video">
             <video id="video1" width="100%" height="200">
-                <source src="Resource/myers_park(audio)_3min.mp4" type="video/mp4">
+                <source src="myers_park(audio)_3min.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="play-button" onclick="toggleVideo('video1')">
-                <img src="Resource/play button.jpg" alt="Play Button">
+                <img src="play button.jpg" alt="Play Button">
             </div>
             <h2>Drone Surveying</h2>
             <p>Experience our professional drone surveying services.</p>
@@ -121,7 +121,7 @@
                 Your browser does not support the video tag.
             </video>
             <div class="play-button" onclick="toggleVideo('video2')">
-                <img src="Resource/play button.jpg" alt="Play Button">
+                <img src="play button.jpg" alt="Play Button">
             </div>
             <h2>Real Estate</h2>
             <p>Discover the beauty of your home with our drones.</p>
@@ -133,7 +133,7 @@
                 Your browser does not support the video tag.
             </video>
             <div class="play-button" onclick="toggleVideo('video3')">
-                <img src="Resource/play button.jpg" alt="Play Button">
+                <img src="play button.jpg" alt="Play Button">
             </div>
             <h2>Event Coverage</h2>
             <p>Watch our drones in action providing event coverage for all types of situations.</p>
@@ -145,7 +145,7 @@
                 Your browser does not support the video tag.
             </video>
             <div class="play-button" onclick="toggleVideo('video4')">
-                <img src="Resource/play button.jpg" alt="Play Button">
+                <img src="play button.jpg" alt="Play Button">
             </div>
             <h2>Agricultural Services</h2>
             <p>See how our drones assist in your Everyday life!</p>
